Verslag: code en inlinecode nu met fatsoenlijke opmaak. gebruik \inlinecode en \begin{lstlisting}

--- a/Hoofdstukken/appendices/1_gebruikershandleiding/inleiding.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/inleiding.tex
@@ -16,4 +16,4 @@ Kort gezegd maakt canvas.hs het volgende mogelijk:
 Dit alles zonder gebruik te hoeven maken van monadisch programmeren. 
 
 
-In deze gebruikershandleiding zal worden toegelicht hoe met behulp van Canvas.hs een grafisch haskellprogramma geschreven kan worden. Er zullen een aantal simpele voorbeelden gegeven worden, vervolgens zullen alle mogelijke te tekenen vormen (Shape's), uit te voeren acties (Action's) en te verwachten events (Event's) uitgebreid worden toegelicht. 
+In deze gebruikershandleiding zal worden toegelicht hoe met behulp van Canvas.hs een grafisch haskellprogramma geschreven kan worden. Er zullen een aantal simpele voorbeelden gegeven worden, vervolgens zullen alle mogelijke te tekenen vormen (\shapes), uit te voeren acties (\actions) en te verwachten events (\events) uitgebreid worden toegelicht. 
