--- a/Hoofdstukken/appendices/gebruikershandleiding.tex
+++ b/Hoofdstukken/appendices/gebruikershandleiding.tex
@@ -1,9 +1,10 @@
 %commando's om een aantal vaak voorkomende wooden makkelijker te maken
-\newcommand{\events}{\lstinline{Event's}\xspace}
-\newcommand{\actions}{\lstinline{Action's}\xspace}
-\newcommand{\shapes}{\lstinline{Shapes's}\xspace}
-\newcommand{\type}{\lstinline}
-\newcommand{\shape}{\type{Shape}\xspace}
+\newcommand{\type}{\inlinecode}
+\newcommand{\events}{\type{Event}'s}
+\newcommand{\actions}{\type{Action}'s}
+\newcommand{\shapes}{\type{Shapes}'s}
+\newcommand{\shape}{\type{Shape}}
+
 
 
 
