--- a/verslag.tex
+++ b/verslag.tex
@@ -25,6 +25,8 @@
            {ë}{{\"e}}1
            {ï}{{\"i}}1  
 }
+% command to properly show inline code
+\newcommand{\inlinecode}{\lstinline[basicstyle=\ttfamily,keywordstyle={}]}
 
 % Necessary to make \autoref command display nice Dutch words.
   \def\equationautorefname{Vergelijking}
