--- a/Hoofdstukken/appendices/gebruikershandleiding.tex
+++ b/Hoofdstukken/appendices/gebruikershandleiding.tex
@@ -1,9 +1,9 @@
 %commando's om een aantal vaak voorkomende wooden makkelijker te maken
 \newcommand{\type}{\inlinecode}
-\newcommand{\events}{\type{Event}'s}
-\newcommand{\actions}{\type{Action}'s}
-\newcommand{\shapes}{\type{Shapes}'s}
-\newcommand{\shape}{\type{Shape}}
+\newcommand{\events}{\type{Event}'s\xspace}
+\newcommand{\actions}{\type{Action}'s\xspace}
+\newcommand{\shapes}{\type{Shapes}'s\xspace}
+\newcommand{\shape}{\type{Shape}\xspace}
 
 
 
