--- a/Hoofdstukken/ontwerp/requirements.tex
+++ b/Hoofdstukken/ontwerp/requirements.tex
@@ -1,21 +1,26 @@
 \section{Requirements}
+Het systeem bestaat uit een browseromgeving dat doormiddel van html en JavaScript een gebruikersinterface toont. Doormiddel van een verbinding tussen de browseromgeving en het Haskell-programma kan er vanuit het Haskell-programma output gegenereerd worden in de browser en kunnen er events verstuurd worden vanuit de browseromgeving naar het Haskell-programma.
 
 \begin{enumerate}[{R}1]
-	\item Het systeem dient events vanuit javascript door te geven aan het Haskell-programma van de student.
-	\item In de javascript-omgeving zou een simpele debug-console moeten zijn.
-	\item Toetsaanslagen vanuit het canvas zouden doorgegeven moeten worden aan de haskell-code van de student. 
+	\item Het systeem dient events vanuit JavaScript door te geven aan het Haskell-programma van de student.
+	\item De JavaScript-omgeving dient een simpele debug-console te bevatten.
+	\item Het systeem dient toestaanslagen vanuit de browser door te geven aan het Haskell-programma van de student.
 	\item Het systeem kan eventueel tekstinvoer vragen met een pop-up.
-	\item Grafische primitieven zoals cirkels, vierkanten, lijnen, Bézier curves, n-hoeken en tekst moeten op een simpele manier getekend kunnen worden vanuit een Haskell-programma.
-	\item Het moet mogelijk zijn de vul- en lijnkleur van grafische componenten in te stellen.
-	\item Een gebruiker moet grafische componenten aan kunnen passen zonder zijn programma te hoeven hercompileren.
+	\item Het systeem dient grafische primitieven zoals cirkels, vierkanten, lijnen, Bézier curves, n-hoeken en tekst moeten op een simpele manier getekend kunnen worden vanuit het Haskell-programma van de student.
+	\item Het systeem dient vul- en lijnkleuren van grafische componenten instelbaar te maken.
+	\item Een programmeur moet grafische componenten aan kunnen passen zonder zijn programma te hoeven hercompileren.
 	\item Het systeem kan eventueel plaatjes inladen op het canvas.
 	\item Het systeem kan eventueel gradients als vulkleur gebruiken.
-	\item Er kan eventueel gezoomd en geschoven worden op de canvas.
+	\item Het systeem kan eventueel zoomen en geschoven worden op de canvas.
 	\item Het systeem kan eventueel stapsgewijze aanpassingen geanimeerd weergeven.
 	\item Het systeem dient duidelijke errors te genereren.
 	\item Het systeem dient gemakkelijk en snel te gebruiken te zijn.
-	\item De FPPrac-module zou automatisch een browser moeten kunnen starten.
-	\item  Het systeem zou de canvas opnieuw moeten laden als de Haskellcode opnieuw gecompileerd wordt.
-	\item Als de verbinding tussen javascript en Haskell verbroken wordt zou hiervan van melding gemaakt moeten kunnen worden aan de gebruiker. 
-	\item 70\% code coverage (exclusief frameworks) zou behaald moeten worden.
+	\item Het systeem dient automatisch een browser te starten bij het draaien van het programma.
+		\item Als de verbinding tussen javascript en Haskell verbroken wordt zou hiervan van melding gemaakt moeten kunnen worden aan de gebruiker. 
+	\item Het systeem dient de browseromgeving opnieuw te laden als het Haskell-programma opnieuw gecompileerd wordt.
+
+\end{enumerate}
+\subsubsection{Niet functionele requirements}
+\begin{enumerate}[{R}17]
+	\item Het systeem dient getest te zijn met 70\% code coverage (exclusief frameworks).
 \end{enumerate}
