--- a/Hoofdstukken/ontwerp/requirements.tex
+++ b/Hoofdstukken/ontwerp/requirements.tex
@@ -2,26 +2,40 @@
 Het systeem bestaat uit een browseromgeving dat doormiddel van html en JavaScript een gebruikersinterface toont. Doormiddel van een verbinding tussen de browseromgeving en het Haskell-programma kan er vanuit het Haskell-programma output gegenereerd worden in de browser en kunnen er events verstuurd worden vanuit de browseromgeving naar het Haskell-programma.
 
 
+\subsubsection{Functionele requirements}
 \begin{enumerate}[{R}1]
-	\item Het systeem dient events vanuit JavaScript door te geven aan het Haskell-programma van de student.
-	\item De JavaScript-omgeving dient een simpele debug-console te bevatten.
-	\item Het systeem dient toestaanslagen vanuit de browser door te geven aan het Haskell-programma van de student.
-	\item Het systeem kan eventueel tekstinvoer vragen met een pop-up.
 	\item Het systeem dient grafische primitieven zoals cirkels, vierkanten, lijnen, Bézier curves, n-hoeken en tekst moeten op een simpele manier getekend kunnen worden vanuit het Haskell-programma van de student.
+	\begin{enumerate}[{R1.}1]
+		\item Het systeem kan eventueel plaatjes inladen op het canvas.
+	\end{enumerate}
 	\item Het systeem dient vul- en lijnkleuren van grafische componenten instelbaar te maken.
+	\begin{enumerate}[{R2.}1]
+		\item Het systeem kan eventueel gradients als vulkleur gebruiken.
+	\end{enumerate}
+	\item Het systeem dient events vanuit JavaScript door te geven aan het Haskell-programma van de student.
+	\begin{enumerate}[{R3.}1]
+		\item Het systeem dient toetsaanslagen vanuit de browser door te geven.
+		\item Het systeem dient muisklikken vanuit de browser door te geven.
+		\item Het systeem dient scroll-events vanuit de browser door te geven.
+	\end{enumerate}
 	\item Een programmeur moet grafische componenten aan kunnen passen zonder zijn programma te hoeven hercompileren.
-	\item Het systeem kan eventueel plaatjes inladen op het canvas.
-	\item Het systeem kan eventueel gradients als vulkleur gebruiken.
 	\item Het systeem kan eventueel zoomen en geschoven worden op de canvas.
 	\item Het systeem kan eventueel stapsgewijze aanpassingen geanimeerd weergeven.
+	\item Het systeem kan eventueel tekstinvoer vragen met een pop-up.
 	\item Het systeem dient duidelijke errors te genereren.
-	\item Het systeem dient gemakkelijk en snel te gebruiken te zijn.
+	\begin{enumerate}[{R8.}1]
+		\item Als de verbinding tussen javascript en Haskell verbroken wordt dient het systeem eer error te tonene aan de gebruiker. 
+		\item Het systeem dient een error te tonen wanneer een functionaliteit in een onverwachte staat komt.
+	\end{enumerate}
 	\item Het systeem dient automatisch een browser te starten bij het draaien van het programma.
-		\item Als de verbinding tussen javascript en Haskell verbroken wordt zou hiervan van melding gemaakt moeten kunnen worden aan de gebruiker. 
 	\item Het systeem dient de browseromgeving opnieuw te laden als het Haskell-programma opnieuw gecompileerd wordt.
+	\item De JavaScript-omgeving dient een simpele debug-console te bevatten.
 
 \end{enumerate}
+
 \subsubsection{Niet functionele requirements}
-\begin{enumerate}[{R}17]
+\begin{enumerate}[{R}1]
+\setcounter{enumi}{11}
+	\item Het systeem dient gemakkelijk en snel te gebruiken te zijn.
 	\item Het systeem dient getest te zijn met 70\% code coverage (exclusief frameworks).
 \end{enumerate}
