--- a/Hoofdstukken/ontwerp/testplan.tex
+++ b/Hoofdstukken/ontwerp/testplan.tex
@@ -1,1 +1,24 @@
 \section{Testplan} \label{sec:testplan}
+Gedurende het gehele ontwikkelingstraject moeten tests ontwikkeld worden. Voor elke requirements, feature en elk object moet een bijbehorende test worden ontwikkeld. Om voldoende test coverage te garanderen moet alle ontwikkelde code controleerd zijn op het hebben van tests voordat het in de centrale development branch geplaatst mag worden. Dit gebeurt door middel van feature branches  Iedere feature wordt in een aparte branch ontwikkeld, voordat een feature gemerged mag worden naar de dev branch moet een pull request gemaakt worden op github. Deze pull request wordt dan beoordeeld door twee andere personen op code coverage, code netheid, documentatie en de requirements. Wanneer dit in orde is wordt de code gemerged naar de dev branch. Zie  \autoref{fig:branching} voor de branchingstrategie.
+
+\begin{figure}
+\begin{center}
+\includegraphics[keepaspectratio,width=\textwidth]{./images/branching.pdf}
+\caption{Branching strategie van Canvas.hs}
+\label{fig:branching}
+\end{center}
+\end{figure}
+
+Door deze manier van werken is altijd de development branch goed getest en is het altijd mogelijk om een nieuwe release uit te brengen met de op dat moment volledig geteste features. Iedere release wordt in de master branch uitgebracht.
+
+\subsection{Cabal}
+De buildconfiguratie en testconfiguraties worden in de cabal file bijgehouden. Met het commando cabal test kunnen alle tests van het project uitgevoerd worden. Op de website van Canvas.hs staan uitgebreide instructies over het uitvoeren van tests.
+
+\subsection{Continuous Integration}
+Iedere ontwikkelaar zal gedurende de ontwikkeling zijn changes pushen naar de Github repository. De Github repository is gekoppeld met Travis een cloud based continuous integration server. Tests worden automatisch uitgevoerd door Travis na het pushen van iedere commit. Indien een build faalt, zal hierover een bericht in Hipchat geplaatst worden. Doordat builds automatisch getest worden is altijd duidelijk: Welke ontwikkelaar fouten in Canvas.hs introduceert, wat de status van iedere branch is en of een branch gemerged kan worden naar de development branch.
+
+\subsection{JavaScript}
+Aan de client side wordt gewerkt met JavaScript, het Jasmine test framework wordt gebruikt om de tests te ontwikkelen. Door middel van PhantomJS kunnen de tests vanaf de command line worden uitgevoerd zonder browser. Hierdoor kunnen de tests ook vanuit de Continuous Integration uitgevoerd worden. Verder zal er gebruik gemaakt worden van de imagediff library om de daadwerkelijk getekende output te testen. Voor het meten van code coverage in JavaScript wordt gebruik gemaakt van Blanket.js.
+
+\subsection{Haskell}
+De server en de module worden ontwikkeld met Haskell. Het Hspec test framework wordt gebruikt om deze onderdelen te testen. Voor het meten van de code coverage in Haskell wordt gebruik gemaakt hpc.
