Spelling mistake fixed

--- a/Hoofdstukken/appendices/1_gebruikershandleiding/primitieven.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/primitieven.tex
@@ -55,7 +55,7 @@ data Shape = ..
 \type{Circle} definieert een cirkel met een bepaald middelpunt en straal
 \begin{lstlisting}
 data Shape = ...
-			| Cicle Point Int
+			| Circle Point Int
 \end{lstlisting}
 \begin{itemize}
 	\item \type{Point},het middenpunt van de cirkel
