--- a/Hoofdstukken/ontwerp/requirements.tex
+++ b/Hoofdstukken/ontwerp/requirements.tex
@@ -1,6 +1,7 @@
 \section{Requirements} \label{sec:requirements}
 Het systeem bestaat uit een browseromgeving dat doormiddel van html en JavaScript een gebruikersinterface toont. Doormiddel van een verbinding tussen de browseromgeving en het Haskell-programma kan er vanuit het Haskell-programma output gegenereerd worden in de browser en kunnen er events verstuurd worden vanuit de browseromgeving naar het Haskell-programma.
 
+Initieel is een lijst met requirements opgesteld. Gedurende het ontwikkelproces zijn bij de meetings met de begeleider nieuwe requirements aan de orde gekomen deze requirements zijn in deze lijst opgenomen.
 
 \subsubsection{Functionele requirements}
 \begin{enumerate}[{R}1]
@@ -22,6 +23,9 @@ Het systeem bestaat uit een browseromgeving dat doormiddel van html en JavaScrip
 	\item Het systeem kan eventueel zoomen en geschoven worden op de canvas.
 	\item Het systeem kan eventueel stapsgewijze aanpassingen geanimeerd weergeven.
 	\item Het systeem kan eventueel tekstinvoer vragen met een pop-up.
+	\item Het systeem kan eventueel fullscreen getoond worden.
+	\item Het systeem dient lokale bestanden te kunnen openen via een functie die aangeboden wordt in de Haskell-module.
+	\item Het systeem kan eventueel bestanden die de gebruiker aanbied.
 	\item Het systeem dient duidelijke errors te genereren.
 	\begin{enumerate}[{R8.}1]
 		\item Als de verbinding tussen javascript en Haskell verbroken wordt dient het systeem eer error te tonene aan de gebruiker. 
@@ -35,7 +39,7 @@ Het systeem bestaat uit een browseromgeving dat doormiddel van html en JavaScrip
 
 \subsubsection{Niet functionele requirements}
 \begin{enumerate}[{R}1]
-\setcounter{enumi}{11}
+\setcounter{enumi}{14}
 	\item Het systeem dient gemakkelijk en snel te gebruiken te zijn.
 	\item Het systeem dient getest te zijn met 70\% code coverage (exclusief frameworks).
 \end{enumerate}
