Added uitbreiden appendix and fixed some spelling mistakes

--- a/Hoofdstukken/appendices/gebruikershandleiding.tex
+++ b/Hoofdstukken/appendices/gebruikershandleiding.tex
@@ -1,4 +1,4 @@
-%commando's om een aantal vaak voorkomende wooden makkelijker te maken
+% commando's om het invoegen van een aantal vaak voorkomende woorden gemakkelijker te maken
 \newcommand{\type}{\inlinecode}
 \newcommand{\events}{\type{Event}'s\xspace}
 \newcommand{\actions}{\type{Action}'s\xspace}
@@ -9,8 +9,6 @@
 
 
 \chapter{Gebruikerhandleiding} \label{sec:gebruikershandleiding}
-
-%TODO: een appendix package oid gebruiken
 
 \input{./Hoofdstukken/appendices/1_gebruikershandleiding/inleiding.tex}
 \input{./Hoofdstukken/appendices/1_gebruikershandleiding/basisintructies.tex}
