--- a/verslag.tex
+++ b/verslag.tex
@@ -1,6 +1,5 @@
 % !TEX spellcheck = nl_NL
 \documentclass[a4paper]{report}
-\usepackage[dutch]{babel} % Set language to Dutch.
 \usepackage{graphicx}
 \usepackage{enumerate}
 \usepackage[utf8]{inputenc} % Set input to UTF-8 to enable easy input of umlauts etc.
@@ -13,7 +12,7 @@
 % set parameters for lstlisting and lstinline
 \lstset{
   breaklines=true, % Enables wrapping in lstlisting environment.
-  backgroundcolor=\color[HTML]{D6D6D6},
+  backgroundcolor=\color[HTML]{F0F0F0},
   commentstyle=\color[HTML]{1A9E00},
   keepspaces=true, 
   language=Haskell,
