--- a/Hoofdstukken/appendices.tex
+++ b/Hoofdstukken/appendices.tex
@@ -1,3 +1,4 @@
 \appendix
 \newcommand{\myparagraph}[1]{\paragraph{#1}\mbox{}\\}
 \input{./Hoofdstukken/appendices/gebruikershandleiding.tex}
+\input{./Hoofdstukken/appendices/uitbreiden.tex}
