Changed font of lstlistings for code input

--- a/verslag.tex
+++ b/verslag.tex
@@ -12,6 +12,7 @@
 % set parameters for lstlisting and lstinline
 \lstset{
   breaklines=true, % Enables wrapping in lstlisting environment.
+  basicstyle=\ttfamily, % the size of the fonts that are used for the code
   backgroundcolor=\color[HTML]{F0F0F0},
   commentstyle=\color[HTML]{1A9E00},
   keepspaces=true, 
