Fixes the code highlighting
Typo in architectuur gefixt

--- a/Hoofdstukken/appendices/1_gebruikershandleiding/primitieven.tex
+++ b/Hoofdstukken/appendices/1_gebruikershandleiding/primitieven.tex
@@ -493,7 +493,7 @@ De volgende \events gaan af als de gebruiker op een toets op het toetsenbord dru
 Bij deze \events wordt van een tweetal types gebruik gemaakt. 
 
 \paragraph{Ingedrukte Toets}
-Deingedrukte toets wordt weergegeven met een \type{String}. Deze bevat een omschrijving van de ingedrukte toets, bijvoorbeeld \inlinecode{"a"}, \inlinecode{"E"} of \inlinecode{"1"} maar ook \inlinecode{"backspace"}, \inlinecode{"shift"} of \inlinecode{"F12"}.
+Deingedrukte toets wordt weergegeven met een \type{String}. Deze bevat een omschrijving van de ingedrukte toets, bijvoorbeeld \inlinecodequotes{"a"}, \inlinecodequotes{"E"} of \inlinecodequotes{"1"} maar ook \inlinecodequotes{"backspace"}, \inlinecodequotes{"shift"} of \inlinecodequotes{"F12"}.
 
 \paragraph{Modifier}
 Bij een Key Event wordt altijd een lijst van \type{Modifier}'s meegegeven. Deze geeft aan of de toetsen Ctrl, Alt of Shift waren ingedrukt tijdens het indrukken van de toets. Let op dat deze toetsen daarnaast ook in hun eigen Key Event zullen resulteren.
