--- a/verslag.tex
+++ b/verslag.tex
@@ -7,26 +7,81 @@
 \usepackage{hyperref} % Turn references into links.
 \usepackage[hypcap]{caption} % Make figure references point to top of figure.
 \usepackage{listings} % listings to include code samples
-\usepackage[usenames]{xcolor} % to change color in code listings
 \usepackage{xspace} % Keeps space after lstinline commands.
+\usepackage{caption}
+\usepackage{xcolor} % to change color in code listings
 
+\DeclareCaptionFont{white}{ \color{white} }
+\DeclareCaptionFormat{listing}{
+  \colorbox[cmyk]{0.43, 0.35, 0.35,0.01 }{
+    \parbox{\textwidth}{\hspace{15pt}#1#2#3}
+  }
+}
+\captionsetup[lstlisting]{ format=listing, labelfont=white, textfont=white, singlelinecheck=false, margin=0pt, font={bf,footnotesize} }
 % set parameters for lstlisting and lstinline
 \lstset{
   breaklines=true, % Enables wrapping in lstlisting environment.
-  backgroundcolor=\color[HTML]{D6D6D6},
-  commentstyle=\color[HTML]{1A9E00},
+  backgroundcolor=\color[HTML]{F8F8F8},
+  frame=tlrb,
   keepspaces=true, 
   language=Haskell,
+  framextopmargin=5pt,
+  framexleftmargin=5pt,
+  framexrightmargin=5pt,
+  framexbottommargin=5pt,
+  commentstyle=\itshape\color[HTML]{999988},
+  rulecolor=\color[HTML]{DDDDDD},
+  stringstyle=\color[HTML]{dd1144},
+  keywordstyle=\idstyle,
+  identifierstyle=\idstyle,
+  keywords={as, case, of, class, data, data family, data instance, default, deriving, deriving instance, do, forall, foreign, hiding, if, then, else, import, infix, infixl, infixr, instance, let, in, mdo, module, newtype, proc, qualified, rec, type, type family, type instance, where},
+  keywordstyle=\color[HTML]{333333}\bfseries,
   numbers=left, %we need line numbers to make line wrapping obvious
+  numberstyle=\color[HTML]{888888}, %we want line numbers to blend in
   tabsize=4,
   literate={ö}{{\"o}}1 %handle some special chars
            {ä}{{\"a}}1
            {ü}{{\"u}}1
            {ë}{{\"e}}1
-           {ï}{{\"i}}1  
+           {ï}{{\"i}}1
+           {0}{{{\color[HTML]{009999}{0}}}}{1}
+           {1}{{{\color[HTML]{009999}{1}}}}{1}
+           {2}{{{\color[HTML]{009999}{2}}}}{1}
+           {3}{{{\color[HTML]{009999}{3}}}}{1}
+           {4}{{{\color[HTML]{009999}{4}}}}{1}
+           {5}{{{\color[HTML]{009999}{5}}}}{1}
+           {6}{{{\color[HTML]{009999}{6}}}}{1}
+           {7}{{{\color[HTML]{009999}{7}}}}{1}
+           {8}{{{\color[HTML]{009999}{8}}}}{1}
+           {9}{{{\color[HTML]{009999}{9}}}}{1}
+           {.0}{{{\color[HTML]{009999}{.0}}}}{1}
+           {.1}{{{\color[HTML]{009999}{.1}}}}{1}
+           {.2}{{{\color[HTML]{009999}{.2}}}}{1}
+           {.3}{{{\color[HTML]{009999}{.3}}}}{1}
+           {.4}{{{\color[HTML]{009999}{.4}}}}{1}
+           {.5}{{{\color[HTML]{009999}{.5}}}}{1}
+           {.6}{{{\color[HTML]{009999}{.6}}}}{1}
+           {.7}{{{\color[HTML]{009999}{.7}}}}{1}
+           {.8}{{{\color[HTML]{009999}{.8}}}}{1}
+           {.9}{{{\color[HTML]{009999}{.9}}}}{1}
 }
+\makeatletter
+\newcommand*\idstyle{%
+        \expandafter\id@style\the\lst@token\relax
+}
+\def\id@style#1#2\relax{%
+        \ifcat#1\relax\else
+                \ifnum`#1=\uccode`#1%
+                        \color[HTML]{445588}\bfseries
+                \else
+                        \color[HTML]{333333}\normalfont
+                \fi
+        \fi
+}
+\makeatother
 % command to properly show inline code
-\newcommand{\inlinecode}{\lstinline[basicstyle=\ttfamily,keywordstyle={}]}
+\newcommand{\inlinecode}[1]{\lstinline[basicstyle=\ttfamily,keywordstyle=\bfseries]|#1|}
+\newcommand{\inlinecodequotes}{\lstinline[basicstyle=\ttfamily,keywordstyle=\bfseries,keywordstyle=\bfseries]} %If it starts with quotes it otherwise doesn't work
 
 % Necessary to make \autoref command display nice Dutch words.
   \def\equationautorefname{Vergelijking}
