kopjes voor problemen toegevoegd

--- a/Hoofdstukken/ontwerp/detail/problemen.tex
+++ b/Hoofdstukken/ontwerp/detail/problemen.tex
@@ -1,1 +1,28 @@
 \subsection{Problemen}
+
+Gedurende het project zijn we een aantal problemen tegengekomen. Deze hadden te maken met zaken en dingen en hier mag meer tekst. Hieronder een kort overzicht van de belangrijkste problemen die zich tijdens het ontwerp en implementatie van het project hebben voorgedaan.
+
+\subsubsection{Kennis haskell}
+
+\paragraph{Monads}
+Denk aan do-notatie, binds (>>= / >>) en eigen monad voor de Server (state)
+
+\paragraph{Threads}
+Denk aan geziek met netjes de websockets en http-threads afsluiten en Timer-threads die nu doorlopen
+
+\subsubsection{Haskell interface}
+De Output (en de splitsing in Out en Block) en verschillen tussen Upload/Download en andere Actions en Shapes
+
+Nameclashes?
+
+\subsubsection{Aannamen gebruik}
+denk aan String vs ByteString in Save/Load etc. Misschien ook dat de Events en Actions lijst heel groot wordt. Iets over Nums vs Int/Float?
+
+\subsubsection{Verschillen systemen}
+
+\paragraph{Toetsen}
+windows-toets vs. command-toets 
+
+\paragraph{Schermresoluties}
+
+\paragraph{Martijn/Thijs, andere dingen?}
