Fixes colors for inline styles

--- a/Hoofdstukken/appendices.tex
+++ b/Hoofdstukken/appendices.tex
@@ -1,4 +1,13 @@
 \appendix
 \newcommand{\myparagraph}[1]{\paragraph{#1}\mbox{}\\}
+% commando's om het invoegen van een aantal vaak voorkomende woorden gemakkelijker te maken
+\newcommand{\type}[1]{\inlinecode{#1}}
+\newcommand{\events}{\type{Event}'s\xspace}
+\newcommand{\actions}{\type{Action}'s\xspace}
+\newcommand{\shapes}{\type{Shapes}'s\xspace}
+\newcommand{\shape}{\type{Shape}\xspace}
+
+
+
 \input{./Hoofdstukken/appendices/gebruikershandleiding.tex}
 \input{./Hoofdstukken/appendices/uitbreiden.tex}
